// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FollowControls (1) Default render. No active user. 1`] = `
Array [
  <button
    className="cursor-pointer rounded-full duration-300 no-wrap bg-blue-dark-sky hover:bg-blue-dark-sky-hover focus:bg-blue-dark-sky-active text-white hover:text-white disabled:opacity-50 disabled:hover:bg-blue-dark-sky disabled:focus:bg-blue-dark-sky h-[2.125rem] px-3 "
    disabled={false}
    onClick={[Function]}
    style={
      Object {
        "marginRight": "5px",
        "outline": "none",
      }
    }
    type="button"
  >
    <div>
      Follow
    </div>
  </button>,
  <button
    className="cursor-pointer rounded-full duration-300 no-wrap bg-blue-dark-sky hover:bg-blue-dark-sky-hover focus:bg-blue-dark-sky-active text-white hover:text-white disabled:opacity-50 disabled:hover:bg-blue-dark-sky disabled:focus:bg-blue-dark-sky h-[2.125rem] px-3 "
    disabled={false}
    onClick={[Function]}
    style={
      Object {
        "outline": "none",
      }
    }
    type="button"
  >
    <div>
      Mute
    </div>
  </button>,
]
`;

exports[`FollowControls (2) Default Render with active account. 1`] = `
Array [
  <button
    className="cursor-pointer rounded-full duration-300 no-wrap bg-blue-dark-sky hover:bg-blue-dark-sky-hover focus:bg-blue-dark-sky-active text-white hover:text-white disabled:opacity-50 disabled:hover:bg-blue-dark-sky disabled:focus:bg-blue-dark-sky h-[2.125rem] px-3 mr-2"
    disabled={true}
    style={
      Object {
        "outline": "none",
      }
    }
    type="button"
  >
    <div>
      Follow
    </div>
  </button>,
  <button
    className="cursor-pointer rounded-full duration-300 no-wrap bg-blue-dark-sky hover:bg-blue-dark-sky-hover focus:bg-blue-dark-sky-active text-white hover:text-white disabled:opacity-50 disabled:hover:bg-blue-dark-sky disabled:focus:bg-blue-dark-sky h-[2.125rem] px-3 "
    disabled={true}
    style={
      Object {
        "outline": "none",
      }
    }
    type="button"
  >
    <div>
      Mute
    </div>
  </button>,
]
`;

exports[`FollowControls (3) Following. 1`] = `
Array [
  <button
    className="cursor-pointer rounded-full duration-300 no-wrap bg-blue-dark-sky hover:bg-blue-dark-sky-hover focus:bg-blue-dark-sky-active text-white hover:text-white disabled:opacity-50 disabled:hover:bg-blue-dark-sky disabled:focus:bg-blue-dark-sky h-[2.125rem] px-3 mr-2"
    disabled={true}
    style={
      Object {
        "outline": "none",
      }
    }
    type="button"
  >
    <div>
      Follow
    </div>
  </button>,
  <button
    className="cursor-pointer rounded-full duration-300 no-wrap bg-blue-dark-sky hover:bg-blue-dark-sky-hover focus:bg-blue-dark-sky-active text-white hover:text-white disabled:opacity-50 disabled:hover:bg-blue-dark-sky disabled:focus:bg-blue-dark-sky h-[2.125rem] px-3 "
    disabled={true}
    style={
      Object {
        "outline": "none",
      }
    }
    type="button"
  >
    <div>
      Mute
    </div>
  </button>,
]
`;

exports[`FollowControls (4) Muted. 1`] = `
Array [
  <button
    className="cursor-pointer rounded-full duration-300 no-wrap bg-blue-dark-sky hover:bg-blue-dark-sky-hover focus:bg-blue-dark-sky-active text-white hover:text-white disabled:opacity-50 disabled:hover:bg-blue-dark-sky disabled:focus:bg-blue-dark-sky h-[2.125rem] px-3 mr-2"
    disabled={true}
    style={
      Object {
        "outline": "none",
      }
    }
    type="button"
  >
    <div>
      Follow
    </div>
  </button>,
  <button
    className="cursor-pointer rounded-full duration-300 no-wrap bg-blue-dark-sky hover:bg-blue-dark-sky-hover focus:bg-blue-dark-sky-active text-white hover:text-white disabled:opacity-50 disabled:hover:bg-blue-dark-sky disabled:focus:bg-blue-dark-sky h-[2.125rem] px-3 "
    disabled={true}
    style={
      Object {
        "outline": "none",
      }
    }
    type="button"
  >
    <div>
      Mute
    </div>
  </button>,
]
`;
